--- a/fitsmeright/Scence/Main/Feed/PostFormVC/PostFormVC.storyboard
+++ b/fitsmeright/Scence/Main/Feed/PostFormVC/PostFormVC.storyboard
@@ -19,7 +19,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gx6-zx-nbW" userLabel="TopView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.98039215690000003" green="0.44705882349999998" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fYh-Mp-cZK">
                                 <rect key="frame" x="0.0" y="20" width="375" height="80"/>
